feat: add calc queries, closed #10
