# internal/controller/dto/industry.go
@@ -1,0 +1,5 @@
+package dto
+
+type IndustryType struct {
+	Type string `json:"type,omitempty" validate:"required,lte=150"`
+}
